--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,21 +1,26 @@
-name: Vercel Production Deployment
-env:
-  VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
-  VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+name: Recommit as Owner for Vercel
+
 on:
   push:
     branches:
       - main
+
 jobs:
-  Deploy-Production:
+  recommit:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v2
-      - name: Install Vercel CLI
-        run: npm install --global vercel@latest
-      - name: Pull Vercel Environment Information
-        run: vercel pull --yes --environment=production --token=${{ secrets.Keshav }}
-      - name: Build Project Artifacts
-        run: vercel build --prod --token=${{ secrets.Keshav }}
-      - name: Deploy Project Artifacts to Vercel
-        run: vercel deploy --prebuilt --prod --token=${{ secrets.Keshav }}
+      - name: Checkout repo
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Configure git as repo owner
+        run: |
+          git config user.name "Keshav Kumar"
+          git config user.email "digiaerotech@gmail.com"
+
+      - name: Recommit latest changes as owner
+        run: |
+          git commit --amend --no-edit --reset-author
+          git push origin HEAD:main --force
