add more clients image + add robots.txt + add facebook pixel + fix admin panel UI + fix redirection from job create

--- a/.example.env
+++ b/.example.env
@@ -11,3 +11,9 @@ SMTP_USER=your-email@yourdomain.com
 SMTP_PASS=your-email-password
 SMTP_FROM_EMAIL=your-email@yourdomain.com
 OFFICE_EMAIL=office@yourdomain.com
+
+# API Configuration
+NEXT_PUBLIC_APP_SECRET='admin'
+
+# Facebook Pixel ID
+NEXT_PUBLIC_FACEBOOK_PIXEL_ID=YOUR_PIXEL_ID
