--- a/.example.env
+++ b/.example.env
@@ -13,7 +13,7 @@ SMTP_FROM_EMAIL=your-email@yourdomain.com
 OFFICE_EMAIL=office@yourdomain.com
 
 # API Configuration
-NEXT_PUBLIC_APP_SECRET='admin'
+NEXT_PUBLIC_APP_SECRET='admin123'
 
 # Facebook Pixel ID
 NEXT_PUBLIC_FACEBOOK_PIXEL_ID=YOUR_PIXEL_ID
